[gd_scene load_steps=2 format=3 uid="uid://pglgijl60x64"]

[ext_resource type="Script" path="res://game_over.gd" id="1_58wyn"]

[node name="Game_over" type="Node2D"]
script = ExtResource("1_58wyn")

[node name="main_menu_button" type="TextureButton" parent="."]
offset_left = 316.0
offset_top = 297.0
offset_right = 933.0
offset_bottom = 417.0

[node name="try_again_button" type="TextureButton" parent="."]
offset_left = 360.0
offset_top = 126.0
offset_right = 805.0
offset_bottom = 243.0

[node name="game_over" type="Label" parent="."]
offset_left = 541.0
offset_top = 45.0
offset_right = 633.0
offset_bottom = 68.0
text = "GAME OVER"

[node name="main_menu" type="Label" parent="."]
offset_left = 541.0
offset_top = 315.0
offset_right = 633.0
offset_bottom = 338.0
text = "MAIN_MENU"

[node name="try_again" type="Label" parent="."]
offset_left = 527.0
offset_top = 156.0
offset_right = 619.0
offset_bottom = 179.0
text = "TRY AGAIN"

[connection signal="button_down" from="main_menu_button" to="." method="_on_main_menu_button_button_down"]
[connection signal="button_down" from="try_again_button" to="." method="_on_try_again_button_button_down"]
