[gd_scene load_steps=8 format=3 uid="uid://bc8brq1hpxsgj"]

[ext_resource type="Script" path="res://game_over.gd" id="1_1mfq3"]
[ext_resource type="Texture2D" uid="uid://s1xe3gsskpsh" path="res://Assets/Kenny/kenney_ui-pack-space-expansion/PNG/Extra/Default/panel_glass_notches.png" id="2_x6s2c"]
[ext_resource type="FontFile" uid="uid://ddufs37isldg4" path="res://Assets/Kenny/kenney_ui-pack-space-expansion/Font/Kenney Future.ttf" id="3_gr4ds"]
[ext_resource type="Texture2D" uid="uid://df6xjshodbom5" path="res://Assets/Kenny/kenney_input-prompts/Steam Deck/Default/steamdeck_trackpad_l_all.png" id="4_hfgmh"]
[ext_resource type="AudioStream" uid="uid://c0slbauvhh14e" path="res://Audio/Sounds/421278__jaszunio15__click_127.wav" id="5_6omvn"]
[ext_resource type="Texture2D" uid="uid://8o8mj21fg8a3" path="res://Assets/Kenny/kenney_ui-pack-space-expansion/PNG/Extra/Default/button_rectangle_depth.png" id="7_b7vvy"]
[ext_resource type="Texture2D" uid="uid://u5n6omb0n81i" path="res://Assets/Kenny/kenney_ui-pack-space-expansion/PNG/Extra/Default/button_rectangle.png" id="8_oh6ua"]

[node name="Start_Screen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1mfq3")
metadata/_edit_lock_ = true

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 84.0
grow_horizontal = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 20

[node name="NinePatchRect2" type="NinePatchRect" parent="MarginContainer"]
self_modulate = Color(1, 1, 1, 0.501961)
layout_mode = 2
texture = ExtResource("2_x6s2c")
region_rect = Rect2(0, 0, 64, 64)
patch_margin_left = 17
patch_margin_top = 19
patch_margin_right = 15
patch_margin_bottom = 18

[node name="TITLE" type="Label" parent="MarginContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_gr4ds")
theme_override_font_sizes/font_size = 66
text = "CHROMADRONE HUNTER
-= GAME OVER =-"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="How_to_play_button" type="TextureButton" parent="."]
visible = false
layout_mode = 0
offset_left = 1267.0
offset_top = 301.0
offset_right = 1701.0
offset_bottom = 494.0
texture_normal = ExtResource("4_hfgmh")
stretch_mode = 1

[node name="AudioStreamPlayerClick" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_6omvn")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -94.0
offset_top = 9.0
offset_right = 98.0
offset_bottom = 187.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50
metadata/_edit_group_ = true

[node name="MenuButton" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("7_b7vvy")
texture_pressed = ExtResource("8_oh6ua")
metadata/_edit_group_ = true

[node name="Label" type="Label" parent="VBoxContainer/MenuButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.362829, 0.362829, 0.362829, 1)
theme_override_fonts/font = ExtResource("3_gr4ds")
theme_override_font_sizes/font_size = 26
text = "MENU"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RetryButton" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("7_b7vvy")
texture_pressed = ExtResource("8_oh6ua")
metadata/_edit_group_ = true

[node name="Label" type="Label" parent="VBoxContainer/RetryButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.362829, 0.362829, 0.362829, 1)
theme_override_fonts/font = ExtResource("3_gr4ds")
theme_override_font_sizes/font_size = 26
text = "RETRY
"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="button_down" from="How_to_play_button" to="." method="_on_how_to_play_button_button_down"]
[connection signal="pressed" from="VBoxContainer/MenuButton" to="." method="_on_menu_button_pressed"]
[connection signal="pressed" from="VBoxContainer/RetryButton" to="." method="_on_retry_button_pressed"]
